--- a/employee_listing_page.html
+++ b/employee_listing_page.html
@@ -1,415 +1,42 @@
-<!DOCTYPE html>  <html lang="ar" dir="rtl">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>عرض الموظفين - شغلني</title>  
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">  
-    <script src="https://cdn.tailwindcss.com"></script>  
-    <style>  
-        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap');  :root {  
-        --primary: #2563eb;  
-        --primary-dark: #1e40af;  
-        --secondary: #f59e0b;  
-        --success: #10b981;  
-        --danger: #ef4444;  
-        --light: #f9fafb;  
-        --dark: #1f2937;  
-        --gray: #6b7280;  
-    }  
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <title>عرض الموظفين</title>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    body {  
-        font-family: 'Tajawal', sans-serif;  
-        background-color: #f5f7fa;  
-    }  
-
-    .employee-card {  
-        transition: all 0.3s ease;  
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);  
-        border: 2px solid transparent;  
-    }  
-
-    .employee-card:hover {  
-        transform: translateY(-5px);  
-        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);  
-        border-color: var(--primary);  
-    }  
-
-    .badge-primary {  
-        background-color: #dbeafe;  
-        color: #1e40af;  
-    }  
-
-    .badge-success {  
-        background-color: #d1fae5;  
-        color: #065f46;  
-    }  
-
-    .badge-warning {  
-        background-color: #fef3c7;  
-        color: #92400e;  
-    }  
-
-    .skill-tag {  
-        display: inline-flex;  
-        align-items: center;  
-        background-color: #eef2ff;  
-        color: #4338ca;  
-        padding: 0.25rem 0.75rem;  
-        border-radius: 9999px;  
-        font-size: 0.75rem;  
-        margin: 0.125rem;  
-    }  
-
-    .work-thumbnail {  
-        width: 60px;  
-        height: 60px;  
-        object-fit: cover;  
-        border-radius: 8px;  
-        cursor: pointer;  
-        transition: transform 0.3s;  
-    }  
-
-    .work-thumbnail:hover {  
-        transform: scale(1.1);  
-    }  
-
-    /* نافذة معرض الأعمال */  
-    .work-gallery-modal {  
-        display: none;  
-        position: fixed;  
-        top: 0;  
-        left: 0;  
-        width: 100%;  
-        height: 100%;  
-        background-color: rgba(0,0,0,0.9);  
-        z-index: 1000;  
-        align-items: center;  
-        justify-content: center;  
-        opacity: 0;  
-        transition: opacity 0.3s ease;  
-    }  
-
-    .work-gallery-modal.show {  
-        display: flex;  
-        opacity: 1;  
-    }  
-
-    .work-gallery-content {  
-        max-width: 800px;  
-        width: 90%;  
-        position: relative;  
-    }  
-
-    .work-gallery-slide {  
-        display: none;  
-        text-align: center;  
-    }  
-
-    .work-gallery-slide.active {  
-        display: block;  
-    }  
-
-    .work-gallery-slide img {  
-        max-height: 70vh;  
-        max-width: 100%;  
-        border-radius: 8px;  
-    }  
-
-    .work-gallery-caption {  
-        color: white;  
-        margin-top: 1rem;  
-        font-size: 1.2rem;  
-    }  
-
-    .work-gallery-close {  
-        position: absolute;  
-        top: -40px;  
-        right: 0;  
-        color: white;  
-        font-size: 2rem;  
-        cursor: pointer;  
-    }  
-
-    .work-gallery-prev,  
-    .work-gallery-next {  
-        position: absolute;  
-        top: 50%;  
-        transform: translateY(-50%);  
-        color: white;  
-        font-size: 2rem;  
-        cursor: pointer;  
-        padding: 1rem;  
-        user-select: none;  
-    }  
-
-    .work-gallery-prev {  
-        left: 0;  
-    }  
-
-    .work-gallery-next {  
-        right: 0;  
-    }  
-</style>
-
-</head>  
-<body>  
-    <nav class="bg-white shadow-lg sticky top-0 z-50">  
-        <div class="container mx-auto px-4 py-3">  
-            <div class="flex justify-between items-center">  
-                <div class="flex items-center space-x-4 rtl:space-x-reverse">  
-                    <div class="text-2xl font-bold text-blue-600">شغلني</div>  
-                </div>  <div class="hidden md:flex items-center space-x-8 rtl:space-x-reverse">  
-                <a href="#" class="text-gray-700 hover:text-blue-600">الرئيسية</a>  
-                <a href="#" class="text-gray-700 hover:text-blue-600">عرض الوظائف</a>  
-                <a href="available_employees.html" class="text-blue-600 font-medium">عرض الموظفين</a>  
-                <a href="employee_registration.html" class="text-gray-700 hover:text-blue-600">إدخال الوظائف</a>  
-            </div>  
-
-            <div class="flex items-center space-x-4 rtl:space-x-reverse">  
-                <div class="relative">  
-                    <button class="p-1 rounded-full text-gray-600 hover:text-gray-900 focus:outline-none">  
-                        <i class="fas fa-bell text-xl"></i>  
-                        <span class="absolute top-0 right-0 h-2 w-2 rounded-full bg-red-500"></span>  
-                    </button>  
-                </div>  
-                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="صورة الملف الشخصي" class="w-10 h-10 rounded-full">  
-            </div>  
-        </div>  
-    </div>  
-</nav>  
-
-<div class="container mx-auto px-4 py-8">  
-    <div class="bg-white rounded-xl shadow-sm p-6 mb-6 sticky top-16 z-40">  
-        <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4">  
-            <div class="flex-1">  
-                <div class="relative">  
-                    <input type="text" placeholder="ابحث عن موظف بالاسم، المهارات أو التخصص..."   
-                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">  
-                    <button class="absolute left-3 top-2 text-gray-500 hover:text-gray-700">  
-                        <i class="fas fa-search"></i>  
-                    </button>  
-                </div>  
-            </div>  
-
-            <div class="flex space-x-3 rtl:space-x-reverse overflow-x-auto whitespace-nowrap py-2">  
-                <select class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 mr-2">  
-                    <option>جميع التخصصات</option>  
-                    <option>تكنولوجيا المعلومات</option>  
-                    <option>المالية والمحاسبة</option>  
-                    <option>الهندسة</option>  
-                    <option>التصميم</option>  
-                </select>  
-
-                <select class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 mr-2">  
-                    <option>جميع المدن</option>  
-                    <option>الخرطوم</option>  
-                    <option>أم درمان</option>  
-                    <option>بحري</option>  
-                    <option>بورتسودان</option>  
-                </select>  
-
-                <button class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center">  
-                    <i class="fas fa-filter mr-2"></i> فلترة  
-                </button>  
-            </div>  
-        </div>  
-    </div>  
-
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="employeeCardsContainer">  
-        <p class="text-gray-600 text-center col-span-full">جاري تحميل الموظفين...</p>  
-    </div>  
-</div>  
-
-<div class="work-gallery-modal" onclick="closeWorkGallery(event)">  
-    <div class="work-gallery-content" onclick="event.stopPropagation()">  
-        <span class="work-gallery-close" onclick="closeWorkGallery(event)">&times;</span>  
-        <div id="gallerySlides"></div>  
-        <a class="work-gallery-prev" onclick="changeSlide(-1)">&#10094;</a>  
-        <a class="work-gallery-next" onclick="changeSlide(1)">&#10095;</a>  
-    </div>  
-</div>  
-
-<script type="module">  
-    // استيراد الدوال اللازمة من Firebase SDKs  
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";  
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";  
-    import { getFirestore, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";  
-
-    // تهيئة Firebase: هذه هي معلومات مشروعك  
-    // **هام:** استبدل "YOUR_API_KEY" و "YOUR_APP_ID" و "YOUR_MEASUREMENT_ID"  
-    // بالقيم الفعلية من إعدادات مشروعك في Firebase Console.  
     const firebaseConfig = {
-apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
-authDomain: "shaglni-c64c0.firebaseapp.com",
-projectId: "shaglni-c64c0",
-storageBucket: "shaglni-c64c0.firebasestorage.app",
-messagingSenderId: "768887356636",
-appId: "1:768887356636:web:11ec1d6991add3309c8819",
-measurementId: "G-98GQGZS09W"
-};
+      apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
+      authDomain: "shaglni-c64c0.firebaseapp.com",
+      projectId: "shaglni-c64c0",
+      storageBucket: "shaglni-c64c0.firebasestorage.app",
+      messagingSenderId: "768887356636",
+      appId: "1:768887356636:web:11ec1d6991add3309c8819",
+      measurementId: "G-98GQGZS09W"
+    };
 
-    // تهيئة Firebase  
-    const app = initializeApp(firebaseConfig);  
-    const analytics = getAnalytics(app); // إذا كنت تستخدم Google Analytics  
-    const db = getFirestore(app); // الحصول على نسخة من Firestore  
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    let allEmployeeData = []; // لتخزين جميع بيانات الموظفين التي تم جلبها لمعرض الصور  
+    async function fetchEmployees() {
+      const list = document.getElementById("employeeList");
+      const querySnapshot = await getDocs(collection(db, "employees"));
 
-    // دالة لجلب وعرض الموظفين  
-    async function fetchAndDisplayEmployees() {  
-        const employeeCardsContainer = document.getElementById('employeeCardsContainer');  
-        employeeCardsContainer.innerHTML = '<p class="text-gray-600 text-center col-span-full">جاري تحميل الموظفين...</p>'; // رسالة التحميل  
+      querySnapshot.forEach((doc) => {
+        const data = doc.data();
+        const li = document.createElement("li");
+        li.textContent = `👤 الاسم: ${data.name} | الرقم: ${data.idNumber}`;
+        list.appendChild(li);
+      });
+    }
 
-        try {  
-            const employeesCollectionRef = collection(db, "employees");  
-            // جلب الموظفين وترتيبهم حسب حقل 'timestamp' تنازلياً (الأحدث أولاً)  
-            const q = query(employeesCollectionRef, orderBy("timestamp", "desc"));  
-            const querySnapshot = await getDocs(q);  
-
-            allEmployeeData = []; // إعادة تعيين البيانات المخزنة  
-            employeeCardsContainer.innerHTML = ''; // مسح رسالة التحميل / البطاقات الموجودة  
-
-            if (querySnapshot.empty) {  
-                employeeCardsContainer.innerHTML = '<p class="text-gray-600 text-center col-span-full">لا يوجد موظفون متاحون حاليًا.</p>';  
-                return;  
-            }  
-
-            querySnapshot.forEach((doc) => {  
-                const employeeData = doc.data();  
-                // تخزين بيانات الموظف في allEmployeeData لاستخدامها في معرض الصور  
-                allEmployeeData.push(employeeData);  
-                // الحصول على الفهرس الحالي للموظف في allEmployeeData لاستخدامه في دالة المعرض  
-                const employeeIndex = allEmployeeData.length - 1;   
-
-                // افتراض أن حالة الموظف 'مُتاح' إذا لم يتم تحديدها  
-                const employeeStatus = employeeData.status || 'مُتاح';   
-                const statusBadgeClass = employeeStatus === 'مُتاح' ? 'badge-primary' : 'badge-success';  
-                const contactButtonClass = employeeStatus === 'مُتاح' ? 'bg-blue-600 text-white hover:bg-blue-700' : 'bg-gray-200 text-gray-800 cursor-not-allowed';  
-                const contactButtonDisabled = employeeStatus !== 'مُتاح' ? 'disabled' : '';  
-                const contactButtonText = employeeStatus === 'مُتاح' ? 'التواصل' : 'موظف حالياً';  
-
-                // معالجة صور الأعمال السابقة: التأكد من وجودها وأنها مصفوفة  
-                const previousWorks = Array.isArray(employeeData.previousWorksUrls) ? employeeData.previousWorksUrls : [];  
-                const previousWorksHTML = previousWorks.map((url, index) => `  
-                    <img src="${url}"   
-                         alt="عمل سابق ${index + 1}"   
-                         class="work-thumbnail"  
-                         onclick="openWorkGallery(${employeeIndex}, ${index})">  
-                `).join('');  
-
-                const employeeCardHTML = `  
-                    <div class="bg-white rounded-xl shadow-sm employee-card overflow-hidden">  
-                        <div class="p-6">  
-                            <div class="flex items-start justify-between">  
-                                <div class="flex items-center space-x-4 rtl:space-x-reverse">  
-                                    <img src="${employeeData.profileImageUrl || 'https://via.placeholder.com/150?text=No+Image'}" alt="صورة الموظف" class="w-16 h-16 rounded-full border-2 border-white shadow">  
-                                    <div>  
-                                        <h3 class="font-bold text-lg">${employeeData.fullName || 'غير معروف'}</h3>  
-                                        <p class="text-gray-600">${employeeData.jobTitle || 'غير محدد'}</p>  
-                                    </div>  
-                                </div>  
-                                <span class="px-3 py-1 rounded-full ${statusBadgeClass} text-xs font-semibold">${employeeStatus}</span>  
-                            </div>  
-
-                            <div class="mt-4">  
-                                <div class="flex items-center text-gray-600 text-sm mb-2">  
-                                    <i class="fas fa-map-marker-alt ml-1"></i>  
-                                    <span>${employeeData.jobLocation || 'غير محدد'}، السودان</span>  
-                                </div>  
-                                <div class="flex items-center text-gray-600 text-sm mb-3">  
-                                    <i class="fas fa-briefcase ml-1"></i>  
-                                    <span>${employeeData.experienceYears || '0'} سنوات خبرة</span>  
-                                </div>  
-
-                                <div class="mb-4">  
-                                    <h4 class="font-semibold text-sm mb-2">المهارات:</h4>  
-                                    <div class="flex flex-wrap">  
-                                        ${(Array.isArray(employeeData.skills) ? employeeData.skills : []).map(skill => `<span class="skill-tag">${skill}</span>`).join('')}  
-                                    </div>  
-                                </div>  
-
-                                <div class="mb-4">  
-                                    <h4 class="font-semibold text-sm mb-2">أعمال سابقة:</h4>  
-                                    <div class="flex space-x-2 rtl:space-x-reverse overflow-x-auto py-2">  
-                                        ${previousWorksHTML || '<p class="text-gray-500 text-xs">لا توجد أعمال سابقة مرفقة.</p>'}  
-                                    </div>  
-                                </div>  
-                            </div>  
-
-                            <div class="flex justify-between items-center pt-4 border-t border-gray-100">  
-                                <div>  
-                                    <span class="text-gray-600 text-sm">السعر:</span>  
-                                    <span class="font-bold">${employeeData.salaryRange?.from || '0'} - ${employeeData.salaryRange?.to || '0'} جنيه</span>  
-                                </div>  
-                                <button class="px-4 py-2 ${contactButtonClass} rounded-lg text-sm" ${contactButtonDisabled}>  
-                                    <i class="fas fa-envelope ml-1"></i> ${contactButtonText}  
-                                </button>  
-                            </div>  
-                        </div>  
-                    </div>  
-                `;  
-                employeeCardsContainer.insertAdjacentHTML('beforeend', employeeCardHTML);  
-            });  
-        } catch (error) {  
-            console.error("خطأ أثناء جلب الموظفين:", error);  
-            employeeCardsContainer.innerHTML = '<p class="text-red-600 text-center col-span-full">حدث خطأ أثناء تحميل الموظفين.</p>';  
-        }  
-    }  
-
-    // Gallery Functions  
-    let currentEmployeeIndex = 0;  
-    let currentWorkIndex = 0;  
-
-    function openWorkGallery(empIndex, workIdx) {  
-        currentEmployeeIndex = empIndex;  
-        currentWorkIndex = workIdx;  
-
-        const modal = document.querySelector('.work-gallery-modal');  
-        const slidesContainer = modal.querySelector('#gallerySlides');  
-
-        slidesContainer.innerHTML = ''; // مسح المحتوى السابق  
-
-        // التأكد من وجود بيانات الموظف وصور الأعمال السابقة  
-        if (allEmployeeData[currentEmployeeIndex] && Array.isArray(allEmployeeData[currentEmployeeIndex].previousWorksUrls) && allEmployeeData[currentEmployeeIndex].previousWorksUrls.length > 0) {  
-            allEmployeeData[currentEmployeeIndex].previousWorksUrls.forEach((url, idx) => {  
-                const slide = document.createElement('div');  
-                slide.className = 'work-gallery-slide ' + (idx === currentWorkIndex ? 'active' : '');  
-                slide.innerHTML = `<img src="${url}" alt="Work Image ${idx + 1}">`;  
-                slidesContainer.appendChild(slide);  
-            });  
-            modal.classList.add('show'); // إظهار النافذة  
-            showSlide(currentWorkIndex); // عرض الشريحة المحددة  
-        }  
-    }  
-
-    // تم تعديل الدالة لتقبل الـ event للمساعدة في تحديد مصدر النقر  
-    function closeWorkGallery(event) {  
-        // الإغلاق فقط إذا تم النقر على خلفية النافذة أو زر الإغلاق  
-        if (event && (event.target.classList.contains('work-gallery-modal') || event.target.classList.contains('work-gallery-close'))) {  
-            document.querySelector('.work-gallery-modal').classList.remove('show');  
-        }  
-    }  
-
-    function changeSlide(n) {  
-        if (allEmployeeData[currentEmployeeIndex] && Array.isArray(allEmployeeData[currentEmployeeIndex].previousWorksUrls)) {  
-            const numSlides = allEmployeeData[currentEmployeeIndex].previousWorksUrls.length;  
-            if (numSlides > 0) { // التأكد من وجود شرائح لتجنب الأخطاء  
-                currentWorkIndex = (currentWorkIndex + n + numSlides) % numSlides;  
-                showSlide(currentWorkIndex);  
-            }  
-        }  
-    }  
-
-    function showSlide(n) {  
-        const slides = document.querySelectorAll('#gallerySlides .work-gallery-slide');  
-        slides.forEach((slide, index) => {  
-            slide.classList.toggle('active', index === n);  
-        });  
-    }  
-
-    // جلب الموظفين عند تحميل الصفحة  
-    document.addEventListener('DOMContentLoaded', fetchAndDisplayEmployees);  
-</script>
-
-</body>  
+    window.addEventListener("DOMContentLoaded", fetchEmployees);
+  </script>
+</head>
+<body>
+  <h2>قائمة الموظفين</h2>
+  <ul id="employeeList"></ul>
+</body>
 </html>
